[package]
name = "rupert-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = "0.1.11"
tokio = { version= "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
